[tool.poetry]
name = "discord vc time spent"
version = "0.1.0"
description = ""
authors = ["Shashwat <10794178+TheTrio@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
