[tool.poetry]
name = "friends"
version = "0.1.0"
description = "Rename Friends Episodes!"
authors = ["Shashwat <10794178+TheTrio@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
friends-renamer = 'friends.main:main'